<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="cn.smiles.autoreader.MainActivity">
    <item
        android:id="@+id/action_start_reader"
        android:orderInCategory="98"
        android:title="@string/action_start_reader_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_stop_reader"
        android:orderInCategory="99"
        android:title="@string/action_stop_reader_text"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_setting_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/all_checked"
        android:orderInCategory="101"
        android:title="@string/all_checked_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/not_all_checked"
        android:orderInCategory="101"
        android:title="@string/not_all_checked_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_app_sys_setting"
        android:orderInCategory="102"
        android:title="@string/action_app_sys_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/open_display_page"
        android:orderInCategory="103"
        android:title="@string/set_aways_bright_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/exit_app"
        android:orderInCategory="104"
        android:title="@string/exit_app_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/test_01"
        android:orderInCategory="110"
        android:title="@string/test_text"
        app:showAsAction="never"/>
</menu>
